Slider on mobile fixed

--- a/code/project/slider-with-url/--portrait/slider-with-url--portrait.scss
+++ b/code/project/slider-with-url/--portrait/slider-with-url--portrait.scss
@@ -8,7 +8,9 @@
         justify-content: center;
         align-items: center;
 
-        height: $lem * 2;
+        height: $lem * 3;
+        width: 98%;
+        
         @include colors(black-on-white);
         @include scale(small-1);
       }
